--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@ body {
     color: #fff;
     border-radius: 3px;
     background-color: rgba(0, 0, 0, 0.5);
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
+/*    font-family: 'Lato', sans-serif;
+    font-weight: 300;*/
     font-size: 11px;
     position: absolute;
     left: 10px;
