Correct text about-dot

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 .about-box {
     color: #fff;
     border-radius: 3px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
 /*    font-family: 'Lato', sans-serif;
     font-weight: 300;*/
     font-size: 11px;
@@ -31,7 +31,7 @@ body {
     z-index: 2;
     padding: 20px;
     width: 190px;
-    height: 275px;
+    height: 300px;
     overflow: hidden;
     text-align: left;
 }
@@ -59,7 +59,7 @@ body {
 .city-container .rio-janeiro:last-child {
   margin: 0px;
 }
-.about-description {
+.about-description, .about-dot {
     margin-left: 10px;
     color: #D8D8D8;
     margin-top: 0px;
