--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,44 @@ body {
   color: #000;
   font-weight: 300;
 }
+.header-home {
+    padding: 5px 0;
+    background-color: #7d82ff;
+    width: 100%;
+    z-index: 2;
+    position: absolute;
+}
+.header-home .links {
+    width: 1100px;
+    margin: 0 auto;
+}
+.header-home .links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.header-home .links ul li {
+    margin: 0 30px 0 10px;
+    padding: 0;
+    display: inline;
+}
+/*.header-home .links ul li a {
+    opacity: .5;
+}*/
+/*.header-home .links ul li:last-child {
+  margin: 0;
+}*/
+.header-home .links img {
+    height: 10px;
+    margin: 2px 0;
+    /*vertical-align: middle;*/
+ }
+ .header-home .links .logo img{
+    height: 15px;
+    margin: 2px 800px 0 0;
+    /*vertical-align: middle;*/
+ }
+
 #map {
     overflow: hidden;
     overflow-x: hidden;
@@ -27,7 +65,7 @@ body {
     font-size: 11px;
     position: absolute;
     left: 10px;
-    top: 10px;
+    top: 40px;
     z-index: 2;
     padding: 20px;
     width: 190px;
