--- a/css/styles.css
+++ b/css/styles.css
@@ -5,40 +5,8 @@ body {
   font-family: 'Lato', sans-serif;
   color: #000;
   font-weight: 300;
+  cursor: none !important;
 }
-.header-home {
-    padding: 5px 0;
-    background-color: #7d82ff;
-    width: 100%;
-    z-index: 2;
-    position: absolute;
-    height: 20px;
-}
-.header-home .links {
-    width: 1100px;
-    margin: 0 auto;
-}
-.header-home .links ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.header-home .links ul li {
-    margin: 0 30px 0 10px;
-    padding: 0;
-    display: inline;
-}
-
-.header-home .links img {
-    height: 10px;
-    margin: 2px 0;
-    /*vertical-align: middle;*/
- }
- .header-home .links .logo img{
-    height: 15px;
-    margin: 2px 800px 0 0;
-    /*vertical-align: middle;*/
- }
 
 #map {
     overflow: hidden;
@@ -47,116 +15,8 @@ body {
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 30px;
+    top: 0px;
     left: 0px;
     right: 0px;
     bottom: 0px;
-}
-.about-box {
-    color: #fff;
-    border-radius: 3px;
-    background-color: rgba(0, 0, 0, 0.6);
-/*    font-family: 'Lato', sans-serif;
-    font-weight: 300;*/
-    font-size: 11px;
-    position: absolute;
-    left: 10px;
-    top: 40px;
-    z-index: 2;
-    padding: 20px;
-    width: 190px;
-    height: 330px;
-    overflow: hidden;
-    text-align: left;
-}
-.about-box h1 {
-    font-size: 13px;
-    margin-left: 10px;
-    text-align: center;
-}
-.city-container {
-    font-size: 13px;
-    display: inline-block;
-    list-style: none;
-    cursor: pointer;
-    color: #D8D8D8;
-    margin-left: 25px;
-    padding: 0px;
-    /*margin-left: 10px;*/
-}
-.city-container .sao-paulo,
-.city-container .rio-janeiro {
-    float: left;
-    margin-right: 15px;
-    margin-left: 0px;
-}
-.city-container .rio-janeiro:last-child {
-  margin: 0px;
-}
-.about-description,
-.about-dot {
-    margin-left: 10px;
-    color: #D8D8D8;
-    margin-top: 0px;
-}
-.legend-container {
-    margin-left: 10px;
-    padding-left: 0px;
-    margin-top: 20px;
-}
-.legend-container li {
-    cursor: pointer;
-    line-height: 11px;
-    list-style: none;
-    margin-top: 11px;
-    text-align: left;
-    color: #D8D8D8;
-}
-.legend-container li .level-higher,
-.legend-container li .level-high-school,
-.legend-container li .level-basic,
-.legend-container li .level-incomplete {
-    display: inline-block;
-    /*background-color: #fff;*/
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    margin-right: 5px;
-}
-.legend-container li span {
-    background-color: #9E9E9E;
-}
-.legend-container li.active .level-higher {
-    background-color: #54ff6b;
-}
-.legend-container li.active .level-high-school {
-    background-color: #34bddc;
-}
-.legend-container li.active .level-basic {
-    background-color: #3d3be1;
-}
-.legend-container li.active .level-incomplete {
-    background-color: #ff305f;
-}
-.legend-container li:hover {
-    color: #fff;
-}
-.city-container li:hover {
-    color: #fff;
-}
-.about-links {
-    padding: 10px;
-    margin-left: 10px;
-    text-align: center;
-    /*float: left;*/
-}
-.about-links a,
-.about-links a:visited,
-.about-links a:hover,
-.about-links a:active {
-    text-decoration: none;
-    color: #D8D8D8;
-}
-.about-links a:hover {
-    color: #fff;
 }
